k8s/services/istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service2-virtual
spec:
  hosts:
    - cluster-ip-service-rest-api
  http:
    - route:
        - destination:
            host: cluster-ip-service-rest-api
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
